--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 node_modules/
 
 /client/build
+
+/cliet/.env.local
+/cliet/.env.development.local
+/cliet/.env.test.local
+/cliet/.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
